<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_action_list"
        tools:context=".ActionListActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:id="@+id/demo_carrier"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xinde_carrier_demo"/>
            <Button
                    android:id="@+id/demo_zhimafen_api"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xinde_zhimafen_api_demo"/>
            <Button
                    android:id="@+id/demo_taobao_appauth"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xinde_taobao_appauth_demo"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>