<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_task_carrier"
        tools:context=".ZhimafenTaskActivity" android:orientation="vertical">

    <!-- progress bar -->
    <LinearLayout
            android:id="@+id/progress_view"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:indeterminateBehavior="repeat"
                android:indeterminateDrawable="@drawable/anim"/>
        <TextView
                android:id="@+id/progress_message"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/progress_status_auth"/>
    </LinearLayout>

    <!-- failure view -->
    <LinearLayout
            android:id="@+id/failure_view"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#bf360c"
                android:textStyle="bold"
                android:text="@string/app_name"/>
    </LinearLayout>

    <!-- task result -->
    <android.support.v7.widget.CardView
            android:id="@+id/show_score"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="100dp">
        <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:text="@string/title_zhimafen_score"/>
        <TextView
                android:id="@+id/show_zhimafen_score"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>