<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_task"
        tools:context=".TaskActivity" android:orientation="vertical">

    <!-- progress bar -->
    <LinearLayout
            android:id="@+id/progress_view"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:indeterminateBehavior="repeat"
                android:indeterminateDrawable="@drawable/anim"/>
        <TextView
                android:id="@+id/progress_message"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/progress_status_login"/>
    </LinearLayout>

    <!-- intermediate view -->
    <LinearLayout
            android:id="@+id/suspended_view"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/suspended_message"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/suspended_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="1"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/action_go"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_go"
                android:textStyle="bold"/>
    </LinearLayout>

    <!-- failure view -->
    <LinearLayout
            android:id="@+id/failure_view"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"/>
    </LinearLayout>
</RelativeLayout>